car.css
body {
  overflow: hidden;
}

canvas {
  position: absolute;
  top: 0;
  left: 0;
}

.scene {
  position: absolute;
  top: 0;
  left: 0;
}

.car {
  position: absolute;
  top: -8px;
  left: -4px;
  width: 8px;
  height: 16px;
  border-radius: 2px;
  background-color: #0066ff;
  will-change: transform;
}

.car.red {
  background-color: #ff3300;
}

button {
  position: absolute;
  left: 0;
  top: 0;
}

